@@ -1,6 +1,6 @@
 Package: mi
-Version: 0.06-1
-Date: 2009-4-16
+Version: 0.06-2
+Date: 2009-4-18
 Title: Missing Data Imputation and Model Checking
 Author: Andrew Gelman <gelman@stat.columbia.edu>, Jennifer Hill
         <jh1030@columbia.edu>, Masanao Yajima <my2167@columbia.edu>,
@@ -11,6 +11,6 @@ Depends: methods, MASS, nnet, car, arm, lme4, R2WinBUGS, abind
 Description: Missing-data imputation and model checking
 URL: http://www.stat.columbia.edu/~gelman/
 License: GPL (>= 2)
-Packaged: Fri Apr 17 04:21:15 2009; SUYS
+Packaged: 2009-04-19 03:30:50 UTC; SUYS
 Repository: CRAN
-Date/Publication: 2009-04-17 17:35:04
+Date/Publication: 2009-04-19 18:07:40
